# Server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 2fe311b82c86_insert_indeces.py  3b35b650c1a1_added_events_table.py  6f712786c7ba_created_users_and_stops.py  7dceba6eab0d_added_login_indexes.py  9562c65b3c76_add_email_codes_table.py  a90c22f7a6ae_initial_all_logistic.py  bec5cfdd3454_added_likes_for_stops.py  cbcce4ef8531_added_logs.py  ec21eb8d8b60_added_feedbacks_table.py
model_ml/: passenger_avg_by_route_hour.pkl  target_encoder.pkl  unique_route_ids.pkl  xgboost_model.pkl
src/: main.py
src/api/: __init__.py  admin.py  atp.py  auth.py  email_verification.py  events.py  feedback.py  model_predict.py  navigation.py  operator.py  routes.py  statistic.py  stops.py  timetables.py  users.py
src/core/: constants.py  db.py
src/facecodd/: facecodd.py
src/models/: email_codes.py  logistic.py  stops.py  users.py
src/schemas/: atp.py  charts.py  coord.py  event.py  eventwrited.py  feedbackwrited.py  navigation.py  prediction.py  route.py  stop.py  timetable.py  token.py  user.py  user_auth.py
src/services/: atps.py  auth.py  charts.py  events.py  feedback.py  io.py  model_prediction.py  navigation.py  routes.py  statistic.py  (+2 more)
static/: datatable.css  io.css  login.css  profile.css  stops.css
templates/: admins.html  atps.html  charts.html  events.html  io.html  login.html  logs.html  profile.html  route.html  routes.html  statistic.html  stops.html  timetables.html
(+16 files in other folders)
