[tool.poetry]
name = "serverthreeka"
version = "0.1.0"
description = ""
authors = ["Kiryanov_Aleksey <alexkir04@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
dotenv = "^0.9.9"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
requests = "^2.32.3"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
geopy = "^2.4.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
