[tool.poetry]
name = "serverthreeka"
version = "0.1.0"
description = ""
authors = ["Kiryanov_Aleksey <alexkir04@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.13.3"
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
requests = "^2.32.3"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
geopy = "^2.4.1"
python-multipart = "^0.0.20"
dotenv = "^0.9.9"
fastapi-mail = "1.2.5"  
passlib = {extras = ["bcrypt"], version = "1.7.4"}  
python-jose = {extras = ["cryptography"], version = "3.3.0"}
PyJWT = "2.10.1" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
